.Feat 팀 정보 전부 불러오기로 변경